--- a/Projetos/01_site_grupo/Pages/Stylesheet.css
+++ b/Projetos/01_site_grupo/Pages/Stylesheet.css
@@ -1,25 +1,53 @@
 h1{
     text-align: center;
     font-weight: bold;
+    color: whitesmoke;
     
 }
 h2{
     text-align: center;
     font-weight: bold;
+    color: whitesmoke;
 }
 
 div.TextoPadrao{
     text-align: center;
+    color: whitesmoke;
 }
 
-div.background{
+body{
     background-color: red;
     text-decoration-color: white;
+    color: whitesmoke;
+}
+
+.btn-outline-danger{
+    background-color: white !important;
+    font-weight: bold;
+}
+
+.btn-outline-danger:hover{
+    background-color: red !important;
 }
 
 a{
-    text-align: right;       /*link*/
-    margin-left: 1200px;
+    text-align: center;       /*link*/
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+}
+
+p{
+    text-align: center;       /*link*/
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.btn-group a {
+    display:inline-block;
+}
+
+.centered
+{
+    margin: 0 auto !important;
+    float: none !important;
 }
